# advent-rust

./: Cargo.toml  README.md
src/: main.rs
src/day1/: main.rs
