[package]
name = "advent-rust"
version = "0.1.0"
edition = "2021"
default-run = "advent-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "src/day1/main.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"

[dependencies]
